merge for mock server.
Signed-off-by: Howman <Howman@glenui-air.guest.intern>